--- a/Person-Form/package.json
+++ b/Person-Form/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "backend":"json-server --watch data/db.json",
+    "backend": "json-server --watch data/db.json",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "bootstrap": "^5.3.3",
     "json-server": "^1.0.0-beta.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
